Fixed some typos.

--- a/Team.html
+++ b/Team.html
@@ -167,7 +167,7 @@
           <br></br>
           <h4>Team Overview</h4>
           <hr class="sep">
-         <p>Each member of our team is an experienced programmer and program architect, specifically in the C/C++ language.  Due to our range of knowledge in various CS disciplines, whether it's software engineering, parallel programming, operating systems, website development, hardware interfacing, cybersecurity, system architecture, or graphic design, we have everything covered. Because of the complexity of this capstone, which involves some level of knowledge in Electrical Engineering, Computer Engineering, Optical Engineering, and Software Engineering, we hope to learn how each of these disciplines interact to create one of the most unique instruments on the planet- and in the process develop a working solution for NPOI</p>
+         <p>Each member of our team is an experienced programmer and program architect, specifically in the C/C++ language.  Due to our range of knowledge in various CS disciplines, whether it's software engineering, parallel programming, operating systems, website development, hardware interfacing, cybersecurity, system architecture, or graphic design, we have everything covered. Because of the complexity of this capstone, which involves some level of knowledge in Electrical Engineering, Computer Engineering, Optical Engineering, and Software Engineering, we hope to learn how each of these disciplines interact to create one of the most unique instruments on the planet and in the process develop a working solution for NPOI.</p>
 
      </section>
 
