--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h2><span>About Us</span></h2>
             <hr class="sep">
             <p>
-            Our team has paired with the Navy Precision Optical Interferometer (NPOI) to develop a new control system for their siderostat mirrors.  NPOI, the world's largest optical interferometer, needs high precision to measure stars, and part of that precision involves the mirror system tracking stars and centering light correctly.  Unfortunately 30 years of age renders a significant amoung of their hardware and software as antiquated, thus why they've commissioned a capstone team to explore different solutions and implement the most optimal one.
+            Our team has paired with the Navy Precision Optical Interferometer (NPOI) to develop a new control system for their siderostat mirrors.  NPOI, the world's largest optical interferometer, needs high precision to measure stars, and part of that precision involves the mirror system tracking stars and centering light correctly.  Unfortunately 30 years of age renders a significant amoung of their hardware and software as antiquated, thus why they have commissioned a capstone team to explore different solutions and implement the most optimal one.
 
             The concept for this was orignally provided for by Jim Clark, the current director of NPOI, and can be found <a href="https://www.cefns.nau.edu/~edo/Classes/CS_Capstone/Projects/F19/Clark-NPOI-Mirror%20CControl.pdf">here</a>.
 
